--- a/src/features/contents/board/Board.module.scss
+++ b/src/features/contents/board/Board.module.scss
@@ -1,7 +1,36 @@
+@use "../../../styles/tokens" as *;
+
 .boardContainer {
   width: 100%;
   height: 100%;
   padding: 15px;
   overflow-x: auto;
   box-sizing: border-box;
+}
+
+.emptyBoard {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 100%;
+  color: $message-color;
+
+  img {
+    height: 100px;
+  }
+
+  h2 {
+    margin-bottom: 1rem;
+    font-size: 1.5rem;
+    font-weight: 600;
+  }
+
+  p {
+    font-size: 1rem;
+    line-height: 1.5;
+    max-width: 300px;
+  }
 }
