--- a/src/styles/_tokens.scss
+++ b/src/styles/_tokens.scss
@@ -4,3 +4,6 @@ $bg-opacity: 0.3;
 $border-radius: 12px;
 $shadow-color: rgba(0, 0, 0, 0.1);
 $gray-color: rgb(67, 67, 67);
+
+//text-color
+$message-color: rgb(90, 90, 90);
