--- a/src/features/contents/board/Board.module.scss
+++ b/src/features/contents/board/Board.module.scss
@@ -3,34 +3,33 @@
 .boardContainer {
   width: 100%;
   height: 100%;
-  padding: 15px;
+  padding: $spacing-md;
   overflow-x: auto;
-  box-sizing: border-box;
 }
 
 .emptyBoard {
+  height: 100%;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
-  height: 100%;
-  color: $message-color;
+  color: $color-text-secondary;
 
   img {
-    height: 100px;
+    height: $character-size;
   }
 
   h2 {
-    margin-bottom: 1rem;
-    font-size: 1.5rem;
-    font-weight: 600;
+    margin-bottom: $spacing-md;
+    font-size: $font-size-xl;
+    font-weight: $font-weight-bold;
   }
 
   p {
-    font-size: 1rem;
-    line-height: 1.5;
-    max-width: 300px;
+    font-size: $font-size-lg;
+    line-height: $font-size-xl;
+    max-width: $message-max-width;
   }
 }
