--- a/src/features/contents/list/List.module.scss
+++ b/src/features/contents/list/List.module.scss
@@ -1,72 +1,59 @@
+@use "../../../styles/tokens" as *;
+@use "../../../styles/mixins" as *;
+
 .container {
-  background-color: rgb(236, 236, 236);
-  margin-right: 10px;
-  padding: 20px 10px 10px 10px;
-  box-shadow: 0px 3px 15px -5px #777777;
-  border-radius: 10px;
   height: fit-content;
-  width: 250px;
+  width: $list-width;
+  background-color: $color-bg-list;
+  margin-right: $spacing-md;
+  padding: $spacing-md;
+  box-shadow: $shadow-list;
+  border-radius: $radii-md;
 
   .listTitle {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    font-weight: 800;
-    margin-left: 10px;
-    margin-bottom: 5px;
-
-    .deleteListText {
-      font-size: 10px;
-      color: red;
-    }
+    font-weight: $font-weight-medium;
+    margin-left: $spacing-sm;
+    margin-bottom: $spacing-xs;
   }
 
   .emptyPlaceholder {
-    min-height: 10px;
+    min-height: $spacing-sm;
   }
 
   .addCardInput {
-    background-color: rgb(255, 255, 255);
-    padding: 10px 15px;
-    margin: 5px;
-    border-radius: 10px;
-    box-shadow: 0px 3px 5px -5px #777777;
+    background-color: $color-input-bg;
+    padding: $spacing-sm;
+    margin: $spacing-xs;
+    border-radius: $radii-md;
+    box-shadow: $shadow-list;
 
     input {
-      background: transparent;
-      border: none;
-      outline: none;
-      font-size: 15px;
+      @include input-default;
+      font-size: $font-size-lg;
     }
   }
 
   .addCard {
     display: flex;
-    margin-top: 12px;
+    margin-top: $spacing-md;
     cursor: pointer;
   }
 
   .addingCard {
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: $spacing-sm;
 
     .addCardConfirmButton {
-      background-color: rgb(225, 187, 255);
-      width: fit-content;
-      height: fit-content;
-      padding: 7px;
-      border-radius: 5px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 14px;
-      margin-top: 5px;
-      cursor: pointer;
+      @include button-default;
+      margin-top: $spacing-xs;
     }
 
     .icon {
-      margin-top: 3px;
+      margin-top: $spacing-xs;
       cursor: pointer;
     }
   }
@@ -76,23 +63,6 @@
     box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3), 0 10px 20px rgba(0, 0, 0, 0.2);
     background: linear-gradient(145deg, #ffffff, #f0f0f0);
     opacity: 0.95;
-
-    &::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: linear-gradient(
-        145deg,
-        rgba(255, 255, 255, 0.1) 0%,
-        rgba(0, 0, 0, 0.1) 100%
-      );
-      border-radius: inherit;
-      pointer-events: none;
-    }
-
     animation: dragFloat 0.3s ease-out;
   }
 
