--- a/src/features/header/Header.module.scss
+++ b/src/features/header/Header.module.scss
@@ -2,36 +2,33 @@
 @use "../../styles/tokens" as *;
 
 .headerContainer {
+  @include glass-card;
+  width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
-  @include glass-card;
-  width: 100%;
-  color: white;
-  padding: 5px;
+  padding: $spacing-sm;
+  color: $color-text-primary;
   box-sizing: border-box;
 
   .iconsLeft {
     display: flex;
-    gap: 5px;
+    gap: $spacing-xs;
     justify-self: left;
     align-items: center;
 
     .searchBox {
-      background-color: rgb(255, 255, 255, 0.3);
-      padding: 2.5px;
-      border-radius: 5px;
+      background-color: $color-bg-glass-muted;
+      padding: $spacing-xs;
+      border-radius: $radii-sm;
       display: flex;
       align-items: center;
-      height: 2rem;
-      width: 13rem;
+      height: $searchbox-height;
+      width: $searchbox-width;
 
       input {
-        background: transparent;
-        border: none;
-        outline: none;
-        width: 11rem;
-        color: white;
+        @include input-default;
+        width: $searchbox-width - $icon-size-regular;
       }
 
       .icon {
@@ -45,17 +42,17 @@
   }
 
   .logo {
+    @include logo;
     justify-self: center;
-    font-size: 23px;
-    font-weight: 800;
-    color: rgb(255, 255, 255, 0.7);
+    color: $color-text-primary;
+    font-size: $font-size-logo;
   }
 
   .iconsRight {
     display: flex;
     align-items: center;
     justify-self: right;
-    gap: 5px;
+    gap: $spacing-xs;
 
     .menuContainer {
       .avatar {
@@ -66,48 +63,35 @@
 }
 
 :global(.MuiMenu-paper) {
+  .accountTitle {
+    font-size: $font-size-md;
+    color: $color-text-black;
+  }
   .accountInfo {
-    padding: 15px 16px !important;
+    padding: $spacing-md !important;
     .name {
-      font-size: 13px;
-      font-weight: 600;
+      font-size: $font-size-md;
+      font-weight: $font-weight-medium;
       margin: 0;
-      color: #333;
+      color: $color-text-black;
     }
 
     .email {
-      font-size: 11px;
-      margin: 2px 0 0 0;
-      color: $message-color;
-      opacity: 0.8;
+      font-size: $font-size-sm;
+      margin-top: 2px;
+      color: $color-text-secondary;
     }
   }
 
   .logoutBtn {
-    margin-top: 10px !important;
+    margin-top: $spacing-sm !important;
   }
 }
 
 :global(.MuiListItem-padding) {
-  padding: 0px 16px !important;
-}
-
-:global(.MuiMenuItem-root) {
-  padding: 10px 16px !important;
+  padding: 0px $spacing-lg !important;
 }
 
 .iconContainer {
-  background-color: rgb(255, 255, 255, 0.3);
-  width: fit-content;
-  height: fit-content;
-  padding: 7px;
-  border-radius: 5px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  .icon {
-    width: 1.5rem;
-    height: 1.5rem;
-  }
+  @include icon-container;
 }
