--- a/src/features/login/Login.module.scss
+++ b/src/features/login/Login.module.scss
@@ -1,36 +1,34 @@
+@use "../../styles/tokens" as *;
+@use "../../styles/mixins" as *;
+
 .loginContainer {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: rgb(40, 40, 40);
-  color: white;
+  background-color: $color-bg-login;
+  color: $color-text-primary;
 
   .logo {
-    width: 200px;
-    height: 120px;
-    background: linear-gradient(to bottom left, #f964be, #b09dd6, #7f81e5);
-    border-radius: 10px;
-    margin-bottom: 20px;
+    @include logo;
+    font-size: $font-size-login-logo;
+    background: $color-bg-board;
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
     text-align: center;
-    line-height: 120px;
-    font-size: 40px;
-    font-weight: 800;
+    margin-bottom: $spacing-lg;
   }
 
   p {
-    font-size: 25px;
-    margin-bottom: 40px;
+    font-size: $font-size-xl;
+    margin-bottom: $spacing-xl;
     text-align: center;
-
-    span {
-      font-weight: 800;
-    }
   }
 
   img {
-    width: 200px;
+    width: $font-size-login-logo * 3;
     cursor: pointer;
   }
 }
